--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import-normalize; /* bring in normalize.css styles */
+/* @import-normalize; bring in normalize.css styles */
+/* @import 'node_modules/modern-normalize/modern-normalize.css'; */
 
 body {
   margin: 0;
@@ -12,4 +13,22 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+section {
+  max-width: 600px;
+  margin: 30px auto 0px;
+}
+
+section:last-child {
+  margin-bottom: 30px;
+}
+
+:root {
+  --border-color: rgb(230, 230, 230);
 }
